# wagtail-universal-icon-picker

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: django.yml
config/: settings.py
universal_icon_picker/: apps.py
