[tool.poetry]
name = "wagtail-universal-icon-picker"
version = "0.1.0"
description = "Implements the Universal Icon Picker in Wagtail"
authors = ["Sylvain Boissel <sylvain@boissel.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
wagtail = "^6.0.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
ipython = "^8.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
